# patent-571

./: .gitignore  Cargo.toml  README.md  clippy.toml  demo.tape  dist-workspace.toml  rustfmt.toml  showcase.tape
src/: lib.rs  llm.rs  model.rs
